--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -30,4 +30,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: 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
