--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Niennis/mdlinks.git"
+    "url": "git@github.com:Niennis/mdlinks.git"
   },
   "keywords": [
     "mdlinks",
