--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@niennis/mdlinks",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "## Índice",
-  "main": "index.js",
+  "main": "api.js",
   "directories": {
     "test": "test"
   },
