--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@niennis/mdlinks",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "## Índice",
   "main": "api.js",
   "directories": {
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Niennis/mdlinks"
+    "url": "https://github.com/Niennis/mdlinks.git"
   },
   "keywords": [
     "mdlinks",
