--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@niennis/mdlinks",
   "version": "0.1.3",
   "description": "## Índice",
-  "main": "api.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
